--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,33 @@
 body{
-    background-color: #05b0b9;
+background-color: #eeeeee;
+    
 }
-
+#scroll{
+position: fixed;
+bottom:2.2em;
+right:0;
+animation-name:slideDown;
+animation-duration:2s;
+animation-iteration-count: infinite;
+display: none;
+}
    nav{
     
-    background: #ff9459 !important;
-    color: white !important;
+    background: #ff5722!important;
+   
     height:85px;
+   }
+   .navbarBuscador nav{
+    background-color:#f85f73!important;
+    
+   }
+   .navbarBuscador nav form{
+    width:25%;
+    display: flex;
+    text-align:center;
+    justify-content:left;
+    align-content: center;
+    flex-direction: column;
    }
 .logo{
 position: relative;
@@ -20,14 +41,18 @@ top:-1em;
 }
 
 .home{
-margin-top:1em;
+height:300px;
+color:rgb(236, 236, 236);
+margin-bottom:2em;
+background-color: #00adb5;
 }
  .home p{
  font-size:1.2em;
 
  }
-    .search{
-
+    .buscador{
+    position: relative;
+    top:20%;
     width:25%;
     margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
     display: flex;
@@ -35,12 +60,16 @@ margin-top:1em;
     justify-content:left;
     align-content: center;
     flex-direction: column;
+    
     }
     #searchButton{
     border-radius:10%;
     }
     #searchInput{
     margin-right:10px;
+    }
+    .input-group{
+    margin-bottom:1em;
     }
     #title{
     color: rgb(63, 63, 63);
@@ -51,39 +80,64 @@ margin-top:1em;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); /*sirve para que se adapte las columnas al responsive //ver grid css*/
         grid-auto-rows:auto;/*sirve para que se adapte las columnas al responsive //ver grid css*/
-        grid-gap:5em;
-        margin-top:1.5em;
+        grid-gap:4.6em;
         text-transform: capitalize;
         }
     .card{
     box-shadow: 10px 10px 5px 0px rgba(73, 73, 73, 0.521);
-    width:300px;
+    width:360px;
     margin-bottom:20%;
-    background-color: rgba(245, 245, 245, 0.945);
     border-radius:8px;
     z-index:-9999;
     animation-name: opacity;
     animation-duration:1s;
+    border:rgba(59, 59, 59, 0.144) solid 2.5px;
     }
-   
-
-    .card h4{
-    margin-top:.5em;
-    height:2.2em;
+    .card h5{
+    margin-top:1em;
+    height:65px;
     }
-    .template label{
-        display: flex; /*este codigo alinea en columnas los label osea uno de bajo de otro,solo se aplica a los label*/
-        flex-wrap: wrap;
-        flex-direction: column;
-        color: rgb(63, 63, 63);
+    .synopsis{
+  border-top: rgba(59, 59, 59, 0.144) solid 2px;
+    
+    }
+    .synopsis h6{
+    margin-top:1em;
+    }
+    .synopsis p{
+        height:100px;
         text-align: center;
-        font-weight: bold;
-        margin-bottom:1em;
+        margin-bottom:1.5em;
+        margin-top:1em;
+        margin-left:.5em;
+        margin-right:.5em;
+        }
+    .informacion{
+        border-top: rgba(59, 59, 59, 0.144) solid 2px;
+        margin-top:1em;
+        margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+        display: flex;
+        text-align:center;
+        justify-content:left;
+        align-content: center;
+        flex-direction: column;
+        width:100%;
+        height:20%;
+        color: rgb(75, 75, 75);
+        
     }
+    .informacion label{
+    margin-bottom:.2em;
+    text-transform: capitalize;
+    font-weight:500;
+    }
+
     
     #img{
     width:100%;
-    height:300px;
+    height:220px;
+    border-top-left-radius:8px;
+    border-top-right-radius:8px;
     }
   
     .footer{
@@ -96,3 +150,20 @@ margin-top:1em;
         text-align: center;
         
         }
+        @-webkit-keyframes slideDown {
+            0%{
+            -webkit-transform: translateY(-50%);
+            opacity:1;
+            
+            }
+            50%{
+            -webkit-transform: translateY(10%);
+            opacity:.5;
+            }
+             100%{
+            -webkit-transform: translateY(-50%);
+            opacity:1;
+             }
+                            
+                    
+            }
