--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 body{
-background-color: #eeeeee;
-    
+
+
 }
 #scroll{
+height:40px;
+width: 40px;
 position: fixed;
 bottom:2.2em;
 right:0;
@@ -11,24 +13,15 @@ animation-duration:2s;
 animation-iteration-count: infinite;
 display: none;
 }
-   nav{
-    
-    background: #ff5722!important;
-   
-    height:85px;
-   }
-   .navbarBuscador nav{
-    background-color:#f85f73!important;
-    
-   }
-   .navbarBuscador nav form{
-    width:25%;
-    display: flex;
-    text-align:center;
-    justify-content:left;
-    align-content: center;
-    flex-direction: column;
-   }
+.header{background-color: coral;}
+.navbarBuscador form{
+display: flex;
+text-align:center;
+justify-content:left;
+align-content: center;
+flex-direction:row;
+}
+
 .logo{
 position: relative;
 top:-1em;
@@ -46,124 +39,131 @@ color:rgb(236, 236, 236);
 margin-bottom:2em;
 background-color: #00adb5;
 }
- .home p{
- font-size:1.2em;
+.home p{
+font-size:1.2em;
 
- }
-    .buscador{
-    position: relative;
-    top:20%;
-    width:25%;
-    margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+}
+.buscador{
+position: relative;
+top:20%;
+width:30%;
+margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+/*display: flex;
+text-align:center;
+justify-content:left;
+align-content: center;
+flex-direction: column;
+*/
+}
+.buscador button{
     display: flex;
     text-align:center;
     justify-content:left;
     align-content: center;
-    flex-direction: column;
-    
-    }
-    #searchButton{
-    border-radius:10%;
-    }
-    #searchInput{
-    margin-right:10px;
-    }
-    .input-group{
-    margin-bottom:1em;
-    }
-    #title{
-    color: rgb(63, 63, 63);
-    text-align: center;
-    }
-    .list{
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); /*sirve para que se adapte las columnas al responsive //ver grid css*/
-        grid-auto-rows:auto;/*sirve para que se adapte las columnas al responsive //ver grid css*/
-        grid-gap:4.6em;
-        text-transform: capitalize;
-        }
-    .card{
-    box-shadow: 10px 10px 5px 0px rgba(73, 73, 73, 0.521);
-    width:360px;
-    margin-bottom:20%;
-    border-radius:8px;
-    z-index:-9999;
-    animation-name: opacity;
-    animation-duration:1s;
-    border:rgba(59, 59, 59, 0.144) solid 2.5px;
-    }
-    .card h5{
-    margin-top:1em;
-    height:65px;
-    }
-    .synopsis{
-  border-top: rgba(59, 59, 59, 0.144) solid 2px;
-    
-    }
-    .synopsis h6{
-    margin-top:1em;
-    }
-    .synopsis p{
-        height:100px;
-        text-align: center;
-        margin-bottom:1.5em;
-        margin-top:1em;
-        margin-left:.5em;
-        margin-right:.5em;
-        }
-    .informacion{
-        border-top: rgba(59, 59, 59, 0.144) solid 2px;
-        margin-top:1em;
-        margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
-        display: flex;
-        text-align:center;
-        justify-content:left;
-        align-content: center;
-        flex-direction: column;
-        width:100%;
-        height:20%;
-        color: rgb(75, 75, 75);
-        
-    }
-    .informacion label{
-    margin-bottom:.2em;
-    text-transform: capitalize;
-    font-weight:500;
-    }
+    margin:0 auto;
+}
+#searchButton{
+border-radius:10%;
+}
+#searchInput{
+margin-right:10px;
+}
+.input-group{
+margin-bottom:1em;
+}
+.container h1{
+margin-top:1em;
+margin-bottom:1em;
+}
+.list{
+margin: 0 auto;
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); /*sirve para que se adapte las columnas al responsive //ver grid css*/
+grid-auto-rows:auto;/*sirve para que se adapte las columnas al responsive //ver grid css*/
+grid-column-gap:6em;
+text-transform: capitalize;
+width:60vw;
+}
 
-    
-    #img{
-    width:100%;
-    height:220px;
-    border-top-left-radius:8px;
-    border-top-right-radius:8px;
-    }
-  
-    .footer{
-        background-color:#edeef7de;
-        position: fixed;
-        bottom:0;
-        font-size:1.3em;
-        display: block;
-        width:100vw;
-        text-align: center;
-        
-        }
-        @-webkit-keyframes slideDown {
-            0%{
-            -webkit-transform: translateY(-50%);
-            opacity:1;
-            
-            }
-            50%{
-            -webkit-transform: translateY(10%);
-            opacity:.5;
-            }
-             100%{
-            -webkit-transform: translateY(-50%);
-            opacity:1;
-             }
-                            
-                    
-            }
+.card{
+box-shadow: 10px 10px 5px 0px rgba(73, 73, 73, 0.521);
+width:350px;
+height:70%;
+border-radius:8px;
+z-index:-9999;
+animation-name: opacity;
+animation-duration:1s;
+background-color: #214151;
+border: rgb(146, 144, 144) 1px solid;
+
+}
+.card h5{
+font-size:1em;
+overflow: hidden;
+height:2.5em;
+color: rgb(224, 223, 223);
+}
+.synopsis {
+margin-top:.2em;
+color: rgb(224, 223, 223);
+}
+
+.synopsis p{
+text-overflow: hidden;
+text-align: center;
+margin-left:.5em;
+margin-right:.5em;
+
+}
+.informacion{
+margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+display: flex;
+text-align:center;
+justify-content:left;
+align-content: center;
+flex-direction: column;
+width:100%;
+color: rgb(224, 223, 223);
+}
+.informacion label{
+text-transform: capitalize;
+font-weight:500;
+margin-top:.2em;
+overflow: hidden;
+}
+
+
+#img{
+width:100%;
+height:35%;
+}
+
+
+.footer{
+background-color:#edeef7de;
+position: fixed;
+bottom:0;
+font-size:1.3em;
+display: block;
+width:100vw;
+text-align: center;
+
+}
+
+@-webkit-keyframes slideDown {
+0%{
+-webkit-transform: translateY(-50%);
+opacity:1;
+
+}
+50%{
+-webkit-transform: translateY(10%);
+opacity:.5;
+}
+100%{
+-webkit-transform: translateY(-50%);
+opacity:1;
+}
+
+
+}
