--- a/css/template.css
+++ b/css/template.css
@@ -18,8 +18,8 @@
     height:70%;
     animation-name: opacity;
     animation-duration:1s;
-    background-color: #214151 ;
-    border: rgb(146, 144, 144) 1px solid;
+    /*background-color: #214151 ;*/
+   
     border-radius:5px;
     }
     .cardTemplate h5{
