--- a/css/responsiveBuscador.css
+++ b/css/responsiveBuscador.css
@@ -1,17 +1,27 @@
 @media only screen and (min-device-width : 319px) and (max-device-width : 479px) {
     .Search{
-    margin-top:10vh;
     width:100vw;
-    
+    margin-top:15vh;
     }
     .Search input,select{
-    width:45%;
+    width:50%;
     
     }
 
    .Search button{
     margin-left:.5em;
    }
+.Search form:focus-within{
+ 
+  }
+  .container{
+margin-top:2em;
+  }
+  .container h1{
+    text-transform: capitalize;
+margin-top:4em;
+margin-bottom:-1.2em;
+  }
    .header ul{
 z-index:9999;
    }
