--- a/css/responsive.css
+++ b/css/responsive.css
@@ -84,11 +84,13 @@ top:.5em;
 margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
 display:inline;
 width:100%;
+height:500px;
 }
 .informacion label{
 text-transform: capitalize;
 font-weight:500;
 margin-bottom:.5em;
+width:100%;
 }
 
 
