--- a/css/responsiveBuscador.css
+++ b/css/responsiveBuscador.css
@@ -1,172 +1,142 @@
-@media only screen and (min-device-width : 319px) and (max-device-width : 479px) {
-    .Search{
-    width:100vw;
-    margin-top:15vh;
-    }
-    .Search input,select{
-    width:50%;
-    
-    }
+@media only screen and (min-device-width: 319px) and (max-device-width: 479px) {
+  .Search {
+    width: 100vw;
+    margin-top: 15vh;
+  }
+  .Search input,
+  select {
+    width: 50%;
+  }
 
-   .Search button{
-    margin-left:.5em;
-   }
-.Search form:focus-within{
- 
+  .Search button {
+    margin-left: 0.5em;
   }
-  .container{
-margin-top:2em;
+  .Search form:focus-within {
   }
-  .container h1{
+  .container {
+    margin-top: 2em;
+  }
+  .container h1 {
     text-transform: capitalize;
-margin-top:4em;
-margin-bottom:-1.2em;
+    margin-top: 4em;
+    margin-bottom: -1.2em;
   }
-   .header ul{
-z-index:9999;
-   }
-   .filter{
+  .header ul {
+    z-index: 9999;
+  }
+  .filter {
     /*sticky(posision estatica en determinada posicion) del menu de filtros*/
-        position:sticky;
-        top:3.5em;
-        z-index:1000;
-        
-        }
-        .filter button {
-        border:solid .5px rgb(68, 68, 68);
-        border-radius:10%;
+    position: sticky;
+    top: 3.5em;
+    z-index: 1000;
+  }
+  .filter button {
+    border: solid 0.5px rgb(68, 68, 68);
+    border-radius: 10%;
+  }
+  .push {
+    /*barra de menu*/
+    z-index: 9999;
+  }
+  .push ul {
+    z-index: 9999;
+    margin-top: 2em;
+    margin-left: -2em;
+    list-style: none;
+  }
+  .push ul li h4 {
+  }
+  .push ul li {
+    margin-top: 0.5em;
+  }
 
-        }
-   .push{ /*barra de menu*/
-    z-index:9999;
-    }
-    .push ul{
-        z-index:9999;
-    margin-top:2em;
-    margin-left:-2em;
-    list-style:none;
-    }
-    .push ul li h4{
-    
-     
-      }
-    .push ul li{
-    margin-top:.5em;
-    
-    }
+  .close {
+    position: absolute;
+    top: 1.3em;
+    right: 10px;
+  }
 
-    .close{
-    position:absolute;
-    top:1.3em;
-    right:10px;
-    }
-    
-    .home h1{
-    margin-bottom:-1em;
-    }
-    .home{
-    margin-top:20vh;
-    grid-row-gap:6em;
-    max-width:80vw;
-    }
-    
-    .cardTemplate{
-    min-height:520px;
-    max-width:100%;
-    }
-    .cardTemplate h5{
-    font-size:1em;
-    height:2.5em;
+  .home h1 {
+    margin-bottom: -1em;
+  }
+  .home {
+    margin-top: 20vh;
+    grid-row-gap: 6em;
+    max-width: 80vw;
+  }
+
+  .cardTemplate {
+    min-height: 520px;
+    max-width: 100%;
+  }
+  .cardTemplate h5 {
+    font-size: 1em;
+    height: 2.5em;
     position: relative;
-    top:.5em;
-    
-    }
-    
-    
-    .informacion label{
-    margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
-    display:block;
-    width:100%;
-    }
-    .informacion label{
+    top: 0.5em;
+  }
+
+  .informacion label {
+    margin: 0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+    display: block;
+    width: 100%;
+  }
+  .informacion label {
     text-transform: capitalize;
-    font-weight:500;
-    margin-bottom:.5em;
-    }
-    
-    
-    
-    #img{
-    width:100%;
-    height:300px !important;
-    }
-.container nav{
-margin:0 auto;
-margin-top:2em;
-margin-bottom:2em;
-display: flex;
-justify-content: center;
-align-items: center;
-}
-footer{
-position:relative;
-top:1em;
-}
-    }
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    @media only screen and (min-device-width :318px){
-    .home{
-    
-    grid-row-gap:6em;
-    
-    max-width:80vw;
-    }
-    
-    .cardTemplate{
-    min-height:520px;
-    max-width:100%;
-    }
-    .cardTemplate h5{
-    font-size:1em;
-    height:2.5em;
+    font-weight: 500;
+    margin-bottom: 0.5em;
+    width: 100%;
+  }
+
+  #img {
+    width: 100%;
+    height: 300px !important;
+  }
+  .container nav {
+    margin: 0 auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer {
     position: relative;
-    top:.5em;
-    
-    }
-    
-    
-    .informacion{
-    margin:0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
-    display:inline;
-    width:100%;
-    }
-    .informacion label{
+    top: 1em;
+  }
+}
+
+@media only screen and (min-device-width: 318px) {
+  .home {
+    grid-row-gap: 6em;
+
+    max-width: 80vw;
+  }
+
+  .cardTemplate {
+    min-height: 520px;
+    max-width: 100%;
+  }
+  .cardTemplate h5 {
+    font-size: 1em;
+    height: 2.5em;
+    position: relative;
+    top: 0.5em;
+  }
+
+  .informacion {
+    margin: 0 auto; /*este codigo ayuda a alinear al centro del layout un div*/
+    display: inline;
+    width: 100%;
+  }
+  .informacion label {
     text-transform: capitalize;
-    font-weight:500;
-    margin-bottom:.5em;
-    }
-    
-    
-    
-    #img{
-    width:100%;
-    height:300px !important;
-    }
-    
-    }
-    
-    
-    
-    
-    
+    font-weight: 500;
+    margin-bottom: 0.5em;
+  }
+
+  #img {
+    width: 100%;
+    height: 300px !important;
+  }
+}
