--- a/css/template.css
+++ b/css/template.css
@@ -1,78 +1,87 @@
-.home h1{
-    margin-top:1em;
-    margin-bottom:1em;
-    }
-    .home{
+.home h1 {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.home {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr)); /*sirve para que se adapte las columnas al responsive //ver grid css*/
-    grid-auto-rows:auto;/*sirve para que se adapte las columnas al responsive //ver grid css*/
-    grid-column-gap:6em;
+    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+    /*sirve para que se adapte las columnas al responsive //ver grid css*/
+    grid-auto-rows: auto;
+    /*sirve para que se adapte las columnas al responsive //ver grid css*/
+    grid-column-gap: 6em;
     text-transform: capitalize;
-    width:100vw;
-    }
-    
-    .cardTemplate{
+    width: 100vw;
+}
+
+.cardTemplate {
     box-shadow: 10px 10px 5px 0px rgba(73, 73, 73, 0.521);
-    width:350px;
-    height:70%;
+    width: 350px;
+    height: 70%;
     animation-name: opacity;
-    animation-duration:1s;
-    border-radius:5px;
-    }
-    .cardTemplate h5{
-    font-size:1em;
+    animation-duration: 1s;
+    border-radius: 5px;
+}
+
+.cardTemplate h5 {
+    font-size: 1em;
     overflow: hidden;
-    height:2.5em;
+    height: 2.5em;
     color: rgb(224, 223, 223);
-    }
-    .synopsis {
-    margin-top:.2em;
+}
+
+.synopsis {
+    margin-top: .2em;
     color: rgb(224, 223, 223);
-    }
-    
-    .synopsis p{
+}
+
+.synopsis p {
     text-overflow: hidden;
     text-align: center;
-    margin-left:.5em;
-    margin-right:.5em;
-    
-    }
-    .informacion{
-        margin:0 auto; 
-        display: flex;
-        text-align:center;
-        justify-content:left;
-        align-content: center;
-        flex-direction: row;
-    width:100%;
+    margin-left: .5em;
+    margin-right: .5em;
+
+}
+
+.informacion {
+    margin: 0 auto;
+    display: flex;
+    text-align: center;
+    justify-content: left;
+    align-content: center;
+    flex-direction: row;
+    width: 100%;
     height: 100% !important;
     color: rgb(224, 223, 223);
-    }
-    .informacion label{
+}
+
+.informacion label {
     text-transform: capitalize;
-    font-weight:500;
-    margin-top:.2em;
+    font-weight: 500;
+    margin-top: .2em;
     overflow: hidden;
-    }
-    
-    
-    #img{
-    width:100%;
-    height:35%;
-    }
+}
 
-    .menu{width:100vw !important;}
 
-    .loader img{ /*icono de carga*/
-        margin-top:50px;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        flex-direction: column;
-        width:30px;
-        height:30px;
-       
-        }
-    
+#img {
+    width: 100%;
+    height: 35%;
+}
+
+.menu {
+    width: 100vw !important;
+}
+
+.loader img {
+    /*icono de carga*/
+    margin-top: 50px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    width: 30px;
+    height: 30px;
+
+}
